Switch to new ffm library